# Corewar

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  anton.s  author  champion.s  op.h  test_corewar.sh
42_sources_hz/: Survivor.s
asm/: 42.cor  42.mor  Batman.cor  Batman.s  Makefile  _.cor  _.s  asm  ultima.mor
asm/includes/: asm.h  errors.h  op.h
asm/src/: add.c  add_token.c  aff.c  and.c  check.c  compile.c  delete.c  error.c  fork.c  get_code.c  get_indirect_value.c  get_name_and_comment.c  get_size.c  hex_func.c  label_stuff.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  main.c  or.c  prepare_labels.c  skip_coment.c  st.c  sti.c  sub.c  token_with_value.c  tokens.c  work_with_file.c  write_to_file.c  xor.c  zjmp.c
asm/src/asm_functions/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
asm2.0/: Batman.cor  Batman.s  Makefile  asm
asm2.0/includes/: asm.h  errors.h  op.h
asm2.0/src/: add.c  add_token.c  aff.c  and.c  check.c  comands.c  error.c  fork.c  get_code.c  get_indirect_value.c  hex_func.c  label_stuff.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  main.c  or.c  st.c  sti.c  sub.c  token_with_value.c  tokens.c  work_with_file.c  write_to_file.c  xor.c  zjmp.c
champs/: death2.cor  ld.cor  live.cor  zjump.cor  zork.cor
corewar/: Makefile  battle.c  check_args_byte.c  check_cars.c  compare.c  corewar  corewar.h  delete_t_car.c  fork_op.c  get_value.c  init_battle.c  init_func.c  init_oper.c  main.c  parse_players.c  parser.c  parser_checks.c  players_id.c  put_funcs.c  t1  t2  t3  t4  test_corewar.sh  tests.c  utils.c  vis.c  vis_disinit.c  vis_init.c
corewar/operations/: add_sub_op.c  aff_op.c  and_or_xor_op.c  fork_op.c  ld_op.c  ldi_op.c  live_op.c  st_op.c  sti_op.c  zjmp_op.c
corewar/parser/: check_flags.c  parse_players.c  parser.c  parser_checks.c
includes/: op.h
libft/: Makefile  ft_bzero.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_memalloc.c  ft_memccpy.c  ft_memcmp.c  ft_memrev.c  ft_nbrlen.c  ft_print_params_delim.c  ft_putchar.c  ft_putendl.c  ft_putnstr.c  ft_strchr.c  ft_striteri.c  ft_strjoin.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncpy.c  ft_strndup.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_swap.c  get_next_line.c
libft/ft_printf/: display_d.c  display_f.c  display_u.c  get_value.c
libft/includes/: get_next_line.h  libft.h
libft_norm/: .gitignore  Makefile  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_contains.c  ft_fibonacci.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_listdel.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_match.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrev.c  ft_memset.c  ft_power.c  ft_print_bits.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+18 more)
libft_norm/ft_printf/: display_b.c  display_c.c  display_o.c  display_p.c  display_s.c  display_x.c  dtoa.c  ft_printf.c  parser.c  utils.c
libft_norm/includes/: ft_printf.h  get_next_line.h  libft.h
ncur/: Makefile  a.out  vis.c
z42_sources/: asm_checker.sh  t1  t2
z42_sources/vm_champs/test_cor/: Backward.s  Batman.s  Torpille.s  Wall.s  champ.s  tdc3.s
z42_sources/vm_champs/test_cor/original/: death3.cor  lfork.cor  lld.cor  lldi.cor
z42_sources/vm_champs/test_cor/own/: Asombra.cor  Douceur_power.cor  Explosive_Kitty.cor  Kittystrophic.cor  Machine-gun.cor  MarineKing.cor  Octobre_Rouge_V4.2.cor  THUNDER.cor  Wall.cor  _.cor  _honeybadger.cor  aff.cor  bigzork.cor  casimir.cor  champ.cor  darksasuke.cor  death3.cor  doge.cor  fluttershy.cor  fork.cor  gateau.cor  gedeon.cor  helltrain.cor  indirect_label.cor  jinx.cor  jumper.cor  justin_bee.cor  ldi.cor  live.cor  loose.cor  mandragore.cor  maxidef.cor  (+13 more)
