cmake_minimum_required(VERSION 3.13)
project(corewar_new C)

set(CMAKE_C_STANDARD 11)

include_directories(asm/includes)
include_directories(libft/includes)

add_executable(corewar_new
        asm/includes/asm.h
        asm/includes/errors.h
        asm/includes/op.h
        asm/src/add.c
        asm/src/add_token.c
        asm/src/aff.c
        asm/src/and.c
        asm/src/check.c
        asm/src/compile.c
        asm/src/error.c
        asm/src/fork.c
        asm/src/get_code.c
        asm/src/get_indirect_value.c
        asm/src/get_name_and_comment.c
        asm/src/get_size.c
        asm/src/hex_func.c
        asm/src/label_stuff.c
        asm/src/ld.c
        asm/src/ldi.c
        asm/src/lfork.c
        asm/src/live.c
        asm/src/lld.c
        asm/src/lldi.c
        asm/src/main.c
        asm/src/or.c
        asm/src/prepare_labels.c
        asm/src/st.c
        asm/src/sti.c
        asm/src/sub.c
        asm/src/token_with_value.c
        asm/src/tokens.c
        asm/src/work_with_file.c
        asm/src/write_to_file.c
        asm/src/xor.c
        asm/src/zjmp.c
        libft/ft_printf/display_b.c
        libft/ft_printf/display_c.c
        libft/ft_printf/display_d.c
        libft/ft_printf/display_f.c
        libft/ft_printf/display_o.c
        libft/ft_printf/display_p.c
        libft/ft_printf/display_s.c
        libft/ft_printf/display_u.c
        libft/ft_printf/display_x.c
        libft/ft_printf/dtoa.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/get_value.c
        libft/ft_printf/parser.c
        libft/ft_printf/utils.c
        libft/includes/ft_printf.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/ft_abs.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_contains.c
        libft/ft_fibonacci.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_listdel.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_match.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memrev.c
        libft/ft_memset.c
        libft/ft_nbrlen.c
        libft/ft_power.c
        libft/ft_print_bits.c
        libft/ft_print_params_delim.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_base.c
        libft/ft_putnbr_fd.c
        libft/ft_putnstr.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strcut.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c)
